--- a/src/assets/styles/components/_main.scss
+++ b/src/assets/styles/components/_main.scss
@@ -1,8 +1,15 @@
 .main {
+  grid-area: main;
+  display: grid;
+  align-items: center;
   padding-top: 5rem;
   background-image: $gradient-orange;
   color: $white;
   text-align: center;
+  
+  @include media-breakpoint-up(lg) {
+    border-top-left-radius: 5rem;
+  }
 }
 
 .location {
@@ -17,24 +24,23 @@
 
 .main-content {
   display: grid;
-  grid-auto-flow: column;
+  grid-template-rows: repeat(2, auto);
+  grid-template-columns: repeat(2, auto);
   align-items: center;
   justify-content: center;
   column-gap: 1.5rem;
-  margin: 3rem auto;
+  margin: 3.25rem auto;
+  text-align: left;
+  line-height: 1.2;
 }
 
 .weather-icon {
+  grid-row: 1 / 3;
   width: 6.25rem;
 }
 
-.info {
-  display: grid;
-  text-align: left;
-}
-
 .temp {
-  @include font-style($temp-size-base, $line-height: 1.2);
+  @include font-style($temp-size-base);
 }
 
 .description {
@@ -42,7 +48,13 @@
 }
 
 .wavy-bg {
-  padding-top: (88 / 375) * 100%;
-  background-image: url('../../img/wavy_background-sm.svg');
-  background-size: cover;
+  align-self: end;
+  height: 88px;
+  background-image: url('../../img/wavy_background.png');
+  background-size: cover;  
+  background-position: left bottom;
+
+  @include media-breakpoint-up(md) {
+    background-size: 100% 88px;
+  }
 }
