chore: create a toggle button

--- a/src/assets/styles/abstracts/_mixins.scss
+++ b/src/assets/styles/abstracts/_mixins.scss
@@ -11,3 +11,13 @@
   font-weight: $weight;
   line-height: $line-height;
 }
+
+/* --------------- Position --------------- */
+
+@mixin position($position, $top: null, $left: null, $right: null, $buttom: null) {
+  position: $position;
+  top: $top;
+  left: $left;
+  right: $right;
+  bottom: $buttom;
+}
