--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -8,5 +8,6 @@
 
 @import './components/app';
 @import './components/main';
+@import './components/button';
 @import './components/list';
 @import './components/listHorizontal';
