--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,5 +9,6 @@
 @import './components/app';
 @import './components/main';
 @import './components/button';
-@import './components/list';
-@import './components/listHorizontal';
+@import './components/dailyList';
+@import './components/hourlyList';
+@import './components/loader';
