--- a/src/styles/vendors-extensions/_bootstrap_custom.scss
+++ b/src/styles/vendors-extensions/_bootstrap_custom.scss
@@ -16,4 +16,4 @@ $paragraph-margin-bottom: 0;
 
 // $link-color: darkviolet;
 
-@import '../../../node_modules/bootstrap/scss/bootstrap.scss';
+@import '~bootstrap/scss/bootstrap.scss';
