--- a/src/styles/components/_main.scss
+++ b/src/styles/components/_main.scss
@@ -54,7 +54,7 @@
   align-self: end;
   position: relative;
   height: 88px;
-  background-image: url('../../img/wavy_background.png');
+  background-image: url('../../assets/img/wavy_background.png');
   background-size: cover;  
   background-position: left bottom;
 
