feat: add ability to show data

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -60,4 +60,7 @@ $btn-toggle-shadow-hover: .375rem .75rem 1.25rem .5rem $shadow;
 $btn-toggle-transform-hover: -.125rem;  // translateY
 $btn-toggle-transition: .35s;
 
-  
+/* --------------- Arrows --------------- */
+
+$arrow-width: .625rem;
+$arrow-height: 1rem;
