--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,5 +10,7 @@
 @import './components/main';
 @import './components/button';
 @import './components/dailyList';
+@import './components/dailyItem';
 @import './components/hourlyList';
+@import './components/hourlyItem';
 @import './components/loader';
