feat: add fetch failure functions

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -21,3 +21,9 @@
   right: $right;
   bottom: $buttom;
 }
+
+/* --------------- Colors --------------- */
+
+@mixin bg-color($color: white, $property: background-color) {
+  #{$property}: $color;
+}
