--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,8 @@
 
 @import './components/app';
 @import './components/main';
+@import './components/mainContent';
+@import './components/errContent';
 @import './components/button';
 @import './components/dailyList';
 @import './components/dailyItem';
