--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -22,6 +22,13 @@ $gradient-blue: linear-gradient($blue, $light-blue);
 $gradient-steel: linear-gradient($steel, $light-steel);
 $gradient-bluegreen: linear-gradient($bluegreen, $light-bluegreen);
 
+$weather-colors: (
+  clear: $gradient-orange,
+  clouds: $gradient-steel,
+  rain: $gradient-blue,
+  snow: $gradient-bluegreen
+);
+
 /* --------------- Box shadow --------------- */
 
 $shadow: rgba($black, .14);
