--- a/src/styles/components/_main.scss
+++ b/src/styles/components/_main.scss
@@ -2,7 +2,7 @@
   display: grid;
   align-items: end;
   padding-top: 5rem;
-  background-image: $gradient-orange;
+  background-image: $gradient-steel;
   color: $white;
   text-align: center;
   
@@ -13,41 +13,10 @@
   }
 }
 
-.location {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  @include font-style($loc-size-base, $font-weight-semibold);
-}
-
-.time {
-  @include font-style($time-size-base);
-}
-
-.main-content {
-  display: grid;
-  grid-template-rows: repeat(2, auto);
-  grid-template-columns: repeat(2, auto);
-  align-items: center;
-  justify-content: center;
-  column-gap: 1.5rem;
-  margin: 3.25rem auto;
-  text-align: left;
-  line-height: 1.2;
-}
-
-.weather-icon {
-  grid-row: 1 / 3;
-  width: 6.25rem;
-  height: 6.25rem;
-}
-
-.temp {
-  @include font-style($temp-size-base);
-}
-
-.description {
-  @include font-style($desc-size-base, $font-weight-semibold);
+@each $type, $color in $weather-colors {
+  .bg-#{$type} {
+    @include bg-color($color, background-image);
+  }
 }
 
 .wavy-bg {
