--- a/src/styles/components/_app.scss
+++ b/src/styles/components/_app.scss
@@ -1,3 +1,9 @@
+html {
+  @media (max-width: 360px) {
+    font-size: 14px;
+  }
+}
+
 body {
   font-family: $font-family-base;
   color: $body-color-base;
