--- a/src/styles/components/_dailyItem.scss
+++ b/src/styles/components/_dailyItem.scss
@@ -4,28 +4,36 @@
   cursor: pointer;
   @include font-style($list-size-base, $font-weight-semibold);
 
-  &::before {
-    grid-column: 1 / 4;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    // background-color: rgba(black, .1);
-    content: '';
-  }
+  // &::before {
+  //   grid-column: 1 / -1;
+  //   @include position(absolute, 0, 0);
+  //   width: calc(100% + #{$arrow-width} + #{$arrow-gap} * 2);
+  //   height: 100%;
+  //   margin-left: -($arrow-width + $arrow-gap + $arrow-gap / 2);
+  //   content: '';
+  // }
 
   .arrow {
     grid-column: 1 / 2;
-    @include position(absolute, $left: -.5rem);
+    @include position(absolute, 50%, -$arrow-gap);
     border-top: ($arrow-height / 2) solid transparent;
     border-bottom: ($arrow-height / 2) solid transparent;
     border-left: $arrow-width solid currentColor;
-    transform: translateX(-100%);
+    transform: translate(-100%, -50%);
     pointer-events: none;
+  }
+
+  .list-item-clickable {
+    grid-column: 1 / -1;
+    @include position(absolute, 0, 0);
+    width: calc(100% + #{$arrow-width} + #{$arrow-gap} * 2);
+    height: 100%;
+    margin-left: -($arrow-width + $arrow-gap + $arrow-gap / 2);
   }
 
   @for $i from 1 through 5 {
     &:nth-child(#{$i}) {
-      &::before, .arrow {
+      &::before, .list-item-clickable, .arrow {
         grid-row: #{$i} / #{$i + 1};
       }
     }
