style: add onclick animation

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -53,6 +53,10 @@ $list-size-base: 1.125rem;
 
 $font-weight-semibold: 600;
 
+/* --------------- Transition --------------- */
+
+$transition-duration-base: .4s;
+
 /* --------------- Grid containers --------------- */
 
 $container-base-padding-xes: (
